--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,8 +20,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.xktt.renovation.ui.main.activity.MainTestActivity"/>
-        <activity android:name="com.xktt.renovation.ui.main.activity.MainActivity">
+        <activity android:name=".ui.main.activity.MainTestActivity"/>
+        <activity android:name=".ui.main.activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
