--- a/config.gradle
+++ b/config.gradle
@@ -60,7 +60,8 @@ ext {
             "eventbus"     : 'org.greenrobot:eventbus:3.2.0',
             "spinkit"      : 'com.github.ybq:Android-SpinKit:1.4.0',
             "arouter"      : "com.alibaba:arouter-api:${dependVersion.arouter}",
-            "rxpermissions": 'com.github.tbruyelle:rxpermissions:0.12'
+            "rxpermissions": 'com.github.tbruyelle:rxpermissions:0.12',
+            "baseRecycler" : 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.1'
     ]
 
     annotationProcessorDeps = [
