新增banner+下拉刷新+图片加载

--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
         google()
         jcenter()
         mavenCentral()
+        maven { url "https://s01.oss.sonatype.org/content/groups/public" }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.2.1'
@@ -27,6 +28,7 @@ allprojects {
         jcenter()
         mavenCentral()
         maven { url 'https://jitpack.io' }
+        maven { url "https://s01.oss.sonatype.org/content/groups/public" }
         // maven { url "https://dl.bintray.com/icecola7/maven" }
     }
 
