--- a/config.gradle
+++ b/config.gradle
@@ -25,6 +25,10 @@ ext {
             "constraintlayout": 'androidx.constraintlayout:constraintlayout:2.0.4',
             "androidx-core"   : 'androidx.core:core-ktx:1.3.2',
             "recyclerview"    : "androidx.recyclerview:recyclerview:1.2.1",
+            "banner"          : "io.github.youth5201314:banner:2.2.2",
+            "refresh-layout"  : "com.scwang.smart:refresh-layout-kernel:2.0.1",
+            "refresh-header"  : "com.scwang.smart:refresh-header-classics:2.0.1",
+            "refresh-footer"  : "com.scwang.smart:refresh-footer-classics:2.0.1"
     ]
 
     retrofit = [
