--- a/config.gradle
+++ b/config.gradle
@@ -2,7 +2,7 @@ ext {
     android = [
             compileSdkVersion: 30,
             buildToolsVersion: "30.0.3",
-            minSdkVersion    : 16,
+            minSdkVersion    : 19,
             targetSdkVersion : 30,
             versionCode      : 1,
             versionName      : "1.0.0"
@@ -58,15 +58,16 @@ ext {
     ]
 
     commonDeps = [
-            "multidex"     : 'com.android.support:multidex:2.0.1',
-            "logger"       : 'com.orhanobut:logger:2.2.0',
-            "glide"        : "com.github.bumptech.glide:glide:${dependVersion.glide}",
-            "eventbus"     : 'org.greenrobot:eventbus:3.2.0',
-            "spinkit"      : 'com.github.ybq:Android-SpinKit:1.4.0',
-            "arouter"      : "com.alibaba:arouter-api:${dependVersion.arouter}",
-            "rxpermissions": 'com.github.tbruyelle:rxpermissions:0.12',
-            "baseRecycler" : 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.1',
-            "utilcode"     : 'com.blankj:utilcodex:1.30.6'
+            "multidex"         : 'com.android.support:multidex:2.0.1',
+            "logger"           : 'com.orhanobut:logger:2.2.0',
+            "glide"            : "com.github.bumptech.glide:glide:${dependVersion.glide}",
+            "eventbus"         : 'org.greenrobot:eventbus:3.2.0',
+            "spinkit"          : 'com.github.ybq:Android-SpinKit:1.4.0',
+            "arouter"          : "com.alibaba:arouter-api:${dependVersion.arouter}",
+            "rxpermissions"    : 'com.github.tbruyelle:rxpermissions:0.12',
+            "baseRecycler"     : 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.1',
+            "utilcode"         : 'com.blankj:utilcodex:1.30.6',
+            "pictureselector"  : 'io.github.lucksiege:pictureselector:v2.7.3-rc03'//图片选择器
     ]
 
     annotationProcessorDeps = [
