--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,9 @@ android {
     sourceSets {
         main {
             jniLibs.srcDirs = ['libs']
+            assets {
+                srcDirs 'src\\main\\assets'
+            }
         }
     }
 
