--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.home.activity.CityListActivity"></activity>
+        <activity android:name=".ui.my.activity.SettingPassActivity"></activity>
+        <activity android:name=".ui.home.activity.CityListActivity" />
         <activity android:name=".ui.my.activity.PersonalDataActivity" />
         <activity android:name=".ui.my.activity.SettingActivity" />
         <activity
