--- a/lib_common/build.gradle
+++ b/lib_common/build.gradle
@@ -2,7 +2,13 @@ plugins {
     id 'com.android.library'
     id 'kotlin-android'
 }
-
+apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
+kapt {
+    arguments {
+        arg("AROUTER_MODULE_NAME", project.getName())
+    }
+}
 android {
     compileSdkVersion rootProject.ext.android.compileSdkVersion
 
@@ -15,12 +21,6 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
 
-        // ARouter
-        javaCompileOptions {
-            annotationProcessorOptions {
-                arguments = [AROUTER_MODULE_NAME: project.getName()]
-            }
-        }
     }
 
     buildTypes {
@@ -53,19 +53,8 @@ dependencies {
 //    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
 //    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.2.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    testImplementation rootProject.ext.testDeps["junit"]
-    androidTestImplementation rootProject.ext.testDeps["runner"]
-    androidTestImplementation rootProject.ext.testDeps["espresso-core"]
-    //组件中依赖阿里路由编译框架
-    annotationProcessor rootProject.ext.annotationProcessorDeps["arouter-compiler"]
-    // leakCanary
-    debugImplementation rootProject.ext.testDeps["leakcanary-debug"]
-    releaseImplementation rootProject.ext.testDeps["leakcanary-release"]
+    api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    kapt rootProject.ext.annotationProcessorDeps["arouter-compiler"]
 
     api project(':baselibs')
     api project(':lib_core')
