--- a/config.gradle
+++ b/config.gradle
@@ -26,6 +26,7 @@ ext {
             "constraintlayout": 'androidx.constraintlayout:constraintlayout:2.0.4',
             "androidx-core"   : 'androidx.core:core-ktx:1.3.2',
             "recyclerview"    : "androidx.recyclerview:recyclerview:1.2.1",
+            "preference"      : "androidx.preference:preference-ktx:1.1.1",
             "banner"          : "io.github.youth5201314:banner:2.2.2",
             "refresh-layout"  : "com.scwang.smart:refresh-layout-kernel:2.0.1",
             "refresh-header"  : "com.scwang.smart:refresh-header-classics:2.0.1",
