--- a/lib_core/build.gradle
+++ b/lib_core/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'com.android.library'
     id 'kotlin-android'
 }
-
+apply plugin: 'kotlin-kapt'
 android {
     compileSdkVersion rootProject.ext.android.compileSdkVersion
 
@@ -49,5 +49,6 @@ dependencies {
     testImplementation rootProject.ext.testDeps["junit"]
     androidTestImplementation rootProject.ext.testDeps["runner"]
     androidTestImplementation rootProject.ext.testDeps["espresso-core"]
+    kapt rootProject.ext.annotationProcessorDeps["room-compliper" ]
     api project(':baselibs')
 }
