--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,6 +75,7 @@ dependencies {
         implementation project(':lib_common')
     } else {
         implementation project(':module_main')
+        implementation project(':module_home')
         implementation project(':module_user')
     }
 
